--- a/springboot-shiro/src/main/resources/templates/home.html
+++ b/springboot-shiro/src/main/resources/templates/home.html
@@ -26,7 +26,7 @@
                 <dl class="layui-nav-child">
                     <dd><a href="javascript:;" data-id="userProper" data-title="基本资料" data-url="/index/users/info" class="menuNvaBar">基本资料</a></dd>
                     <dd><a href="javascript:;" data-id="userSafe" data-title="安全设置" data-url="/index/users/pwd" class="menuNvaBar">更换密码</a></dd>
-                    <dd><a href="javascript:;" data-id="logout" data-title="退出登录" data-url="/index/users/pwd" class="menuNvaBar"  id="logout">退出登录</a></dd>
+                    <dd><a href="javascript:;" data-id="logout" data-title="退出登录" data-url="/index/users/pwd" id="logout">退出登录</a></dd>
                 </dl>
             </li>
             <!--<li class="layui-nav-item"><a href="javascript:;" id="logout">退出</a></li>-->
@@ -175,7 +175,7 @@
                 content: '确定要退出登录么？',
                 yes: function(index, layero){
                     layer.close(index); //如果设定了yes回调，需进行手工关闭
-                    common.ajax("/api/user/logout",null,function (res) {
+                    common.ajax("/api/logout",null,function (res) {
                         top.window.location.href="/index/login";
                     },"GET",true);
                 }
